# halogen-chess

./: .dockerignore  .gitignore  .stylish-haskell.yaml  CHANGELOG.md  Dockerfile  Dockerfile.base  Jenkinsfile  cabal.project  cabal.project.freeze  default.nix  feedback.yaml  flake.nix  halogen-chess.cabal  job.groovy  kustomization.yaml  package-lock.json  package.json  packages.dhall  readme.md  spago.dhall
.github/workflows/: haskell.yml  nix-cabal.yml  nix.yml  ormolu.yml  purescript.yml
app/: GeneratePurescript.hs  Main.hs  Main.purs
base/: app_postgres_instance.yaml  app_postgres_secret.yaml  chess.yaml  jenkins.yaml  jenkins_configuration_as_code.yaml  jenkins_pvc.yaml  jenkins_service_account.yaml  keycloak.yaml  keycloak_postgres_instance.yaml  keycloak_postgres_secret.yaml
charts/: web.yaml
haskell/: LICENSE
haskell/src/: MyLib.hs
haskell/src/Game/: Store.purs
haskell/src/Game/Chess/: Move.purs  Orphans.hs
haskell/src/Game/Components/: Navigation.purs  Square.purs
haskell/src/Game/Components/HTML/: Footer.purs  Piece.purs
nix/: hix.nix  sources.json
src/: Bridge.hs  MyLib.hs
src/Game/: Chess.purs  Routes.purs  Sq.purs  Store.purs
src/Game/Chess/: Board.hs  Board.purs  Internal.purs  Move.hs  Move.purs  Orphans.hs
src/Game/Chess/Internal/: Square.purs
src/Game/Components/: Chessboard.purs  Navigation.purs  Router.purs  Square.purs  Utils.purs
src/Game/Components/HTML/: Header.purs
src/Game/HTML/: Piece.purs  Square.purs
src/Types/: Bridge.hs
static/: index.html  style.css
